# full_datalake

./: .gitignore  CLAUDE.md  Dockerfile.api  Dockerfile.delta  docker-compose.prod.yml  docker-compose.yml
Delta_lake/: .gitignore  pyproject.toml  requirements.txt
Delta_lake/api/: main.py  models.py
Delta_lake/config/: settings.py
Delta_lake/processamento/: data_processor.py  file_watcher.py
Delta_lake/scripts/: debug_null_issue.py  run_processor.py  test_single_file.py
Landing_zone/data/raw/: .gitkeep
scripts/: deploy_hybrid.sh  setup_vps_ubuntu.sh  sync_data.sh
workflow/: plan.md
